[gd_scene load_steps=7 format=3 uid="uid://dncdd0uvknvsa"]

[ext_resource type="AudioStream" uid="uid://dibv1j0xx73el" path="res://addons/GodotLoadScreenFinal/FlickeringLightSound.wav" id="2"]
[ext_resource type="PackedScene" uid="uid://c2ky76fi26trt" path="res://addons/GodotLoadScreenFinal/GodotLogoStartup.tscn" id="3"]
[ext_resource type="LabelSettings" uid="uid://cybasq5ule8w" path="res://addons/GodotLoadScreenFinal/splash_label.tres" id="3_ppxqh"]
[ext_resource type="Script" path="res://addons/GodotLoadScreenFinal/GodotStartupScreen.gd" id="5"]
[ext_resource type="FontFile" uid="uid://cbpsxioxi6a0c" path="res://resources/fonts/PressStart2P-Regular.ttf" id="5_fwp3t"]

[sub_resource type="LabelSettings" id="LabelSettings_wngg3"]
font = ExtResource("5_fwp3t")
font_size = 56

[node name="GodotStartupScreen" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0.0156863, 0.027451, 1)
script = ExtResource("5")

[node name="ChangeSceneTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="LightFlickerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -68.0
offset_right = 130.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Made" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "MADE"
label_settings = ExtResource("3_ppxqh")
uppercase = true

[node name="With" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "With"
label_settings = ExtResource("3_ppxqh")
horizontal_alignment = 2
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="GodotAnimatedSprite" parent="VBoxContainer/MarginContainer/Control" instance=ExtResource("3")]

[node name="Godot" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "godot"
label_settings = SubResource("LabelSettings_wngg3")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="timeout" from="ChangeSceneTimer" to="." method="_on_ChangeSceneTimer_timeout"]
